Redesign ChargingView with card-based layout
- Add Card.java reusable component for card containers
- Create DualRangeSlider Lit web component for SOC selection
- Add DualRangeSlider.java wrapper with HasValue interface
- Add EVModel.java with vehicle presets (Tesla, BMW, VW, etc.)
- Create charging-view.css with card and slider styling
- Refactor ChargingView.java with 5-card structure:
  - Vehicle & Status card with SOC display
  - Charge Level card with dual-range slider
  - Charging Speed card with Advanced section
  - Schedule card with Calculate End/Start toggle
  - Charging Summary with cost breakdown
- Support light and dark themes
- Update design mockups and documentation

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>